# hw12_bulk_server

./: .travis.yml  CMakeLists.txt  README.md  debug_options.cpp  main.cpp
include/: bulk_handlers.h  bulk_server.h  bulk_session.h  command.h  consts_types.h  debug_options.h  functions.h  handler.h  queue_wrapper.h  session_storage.h
tests/: CMakeLists.txt  file_wr_thread_exetpion.sh  test_bulk.cpp  test_log.cpp  test_server.cpp  test_server_start.cpp
